--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/papaparse": "^5.3.15",
+    "firebase": "^11.4.0",
+    "ldrs": "^1.0.2",
     "moment": "^2.30.1",
     "next": "15.2.0",
     "papaparse": "^5.5.2",
